Removed a bunch of useless classes.  Move configuration into utils package